# stymphale_project

./: .gitignore  CHANGELOG  LICENSE  README.md  compose.yaml
.github/workflows/: cpp_test.yml  main.yml
stymphale_ws/: .gitignore
stymphale_ws/src/antikythera/: CMakeLists.txt  README.md  package.xml
stymphale_ws/src/antikythera/include/: land_mark_feature.hpp  land_mark_object.hpp  point_cloud_feature.hpp
stymphale_ws/src/antikythera/src/: antikythera_emulator.cpp  antikythera_land_mark_slicer.cpp  antikythera_node.cpp  land_mark_feature.cpp  land_mark_object.cpp  land_mark_visualizer.cpp  point_cloud_feature.cpp
stymphale_ws/src/antikythera/src/land_mark/: land_mark_object.cpp  point_cloud_feature.cpp
stymphale_ws/src/antikythera/test/: dev_test.cpp  point_cloud_feature_test.cpp
stymphale_ws/src/antikythera_msgs/: CMakeLists.txt  package.xml
stymphale_ws/src/antikythera_msgs/msg/: LandMarkFeature.msg  LandMarkObject.msg
stymphale_ws/src/antikythera_pkg/: CMakeLists.txt  README.md  package.xml
stymphale_ws/src/antikythera_pkg/src/: antikythera_node.cpp
vox_drone/: CHANGELOG  README.md  requirements.txt
vox_drone/.config/: Dockerfile  docker_build.sh  docker_run.sh  setup.sh
vox_drone/data/: cloud1.voxmap  sinfuncmap1.voxmap  sinfuncmap2.voxmap  test1.voxmap
vox_drone/src/: complex32.py  fftMap.py  main.py  mapCreator.py  voxCompressor.py  voxFftConverter.py  voxelMap.py
zawardo_drone/: CHANGELOG  README.md  TROUBLESHOUTTING.md
zawardo_drone/.config/: compose.yaml  docker_build.sh  docker_run.sh  microros_agent_docker  workflow-compose.yaml  zawardo_docker
zawardo_drone/.config/ardupilot_ros/: ardupilot_ros_docker
zawardo_drone/.config/cpp_ros_builder/: cpp_ros_builder_docker
zawardo_drone/.config/micro_ros_agent/: micro_ros_agent_docker
zawardo_drone/.config/qgcontrol/: qgcontrol_docker
zawardo_drone/data/map_maze_1/: map_1731193862.pgm  map_1731193862.yaml
