<?xml version="1.0"?>
<package format="3">
  <name>antikythera_msgs</name>
  <version>0.1.0</version>
  <description>Custom message definitions for the Antikythera project</description>
  
  <maintainer email="vigouroux.art@gmail.com">Arthur Vigouroux</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
