<?xml version="1.0"?>
<package format="3">
  <name>antikythera_msgs</name>
  <version>0.1.0</version>
  <description>Custom message definitions for the Antikythera project</description>

  <maintainer email="vigouroux.art@gmail.com">Arthur Vigouroux</maintainer>

  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies for specific types -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>builtin_interfaces</build_depend>


  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <build_depend>builtin_interfaces</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_generate_interfaces/>
  </export>
</package>
